--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 models/*
 videos/*
 wandb/*
-__pycache__/*
+__pycache__
 preference_data/*
 reward_model/*
 preference_videos/*
+finetune_sac_videos/*
+rlhf_models/*
