--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ models/*
 videos/*
 wandb/*
 __pycache__
-rlhf/preference_data/*
-rlhf/cpl_trained_models/*
+preference_data/*
+cpl_trained_models/*
 eval/*
 played_songs/*
